# demo-260406

./: .gitignore  README.md  dev.sh  package-lock.json  package.json
docs/: PRD.md  README.md
docs/epaper-sync/: API_PROTOCOL.md  ARCHITECTURE.md  DEPLOYMENT.md  SETUP_GUIDE.md
docs/foodshop/: README.md  api-reference.md  architecture-decision.md  architecture-overview.md  deployment-runbook.md  development-guide.md  solution1-6week-delivery-plan.md  solution1-technical-blueprint.md  testing-strategy.md  troubleshooting.md
epaper-sync/: README.md
epaper-sync/scripts/: run_epaper_sync.sh
foodshop/: README.md
foodshop/backend/: README.md  pyproject.toml
foodshop/backend/app/: main.py
foodshop/backend/app/api/: deps.py  routes_orders.py  routes_snapshot.py  routes_voice.py  ws_store.py
foodshop/backend/app/domain/: order_service.py  state_machine.py  voice_intent.py
foodshop/backend/app/infra/: asr_client.py  auth.py  db.py  event_bus.py  repositories.py  settings.py
foodshop/backend/app/schemas/: orders.py  snapshot.py  voice.py
foodshop/backend/app/tests/integration/: test_api_flow.py
foodshop/backend/app/tests/unit/: test_order_service.py  test_state_machine.py
foodshop/backend/deploy/: foodshop-backend.service  nginx-foodshop.conf
foodshop/backend/migrations/: 001_init.sql
foodshop/kitchen-tablet/: .env.example  DELIVERY_CHECKLIST.md  DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  USER_MANUAL.md  index.html  package-lock.json  package.json  start.sh  table.html  tailwind.config.js  tsconfig.json  vite.config.ts
(+45 files in other folders)
